# thesis

./: CMakeLists.txt  License.md  Readme.md  mainpage.dox  manifest.xml
doc/: abstract.tex  analysis.tex  architecture.tex  declarations.tex  discussion.tex  implementation.tex  index.tex  installation.tex  introduction.tex  outlook.tex  thesis.cls  title.tex
include/thesis/: clock.h  color.h  comparator.h  config.h  database.h  dbscan.h  fps_calculator.h  graham_scanner.h  image_loader.h  math2d.h  math3d.h  object_database.h  object_recognizer.h  semantic_map.h  sift_gpu_wrapper.h  uuid.h
launch/: base_link_kinect.launch  test.launch~  thesis.launch  thesis_pr2.launch  thesis_rgbdslam.launch
msg/: ObjectClass.msg  ObjectClassArray.msg  ObjectInstance.msg  ObjectInstanceArray.msg  ObjectStamped.msg  Sample.msg
src/: database.cpp  dbscan.cpp  fps_calculator.cpp  graham_scanner.cpp  image_loader.cpp  init_database.cpp  init_example.cpp  init_mapping.cpp  init_recognition.cpp  init_visualization.cpp  init_webcam.cpp  math2d.cpp  math3d.cpp  object_database.cpp  object_recognizer.cpp  semantic_map.cpp  sift_gpu_wrapper.cpp  siftgpu_descriptor_matcher.cpp  siftgpu_feature_detector.cpp
srv/: DatabaseAddFile.srv  DatabaseAddImg.srv  DatabaseAddURL.srv  DatabaseGetAll.srv  DatabaseGetByID.srv  DatabaseList.srv  DatabaseSetByID.srv  MappingGetAll.srv  MappingGetByID.srv  MappingGetByPosition.srv  MappingGetVisible.srv
